# native

native-source/system/core/adb/: framebuffer_service.c
native-source/system/core/include/ion/: ion.h
native-source/system/core/init/: logo.c
native-source/system/netd/: SoftapController.cpp
native-source/system/security/keystore/: keystore_get.cpp
native-source/system/security/keystore/include/keystore/: keystore_get.h
native-source/system/vold/: Android.mk  DirectVolume.cpp  DirectVolume.h  Fat.cpp  Ntfs.cpp  Volume.cpp  Volume.h
native-x86/: CMakeLists.txt
native-x86/av/: CMakeLists.txt
native-x86/av/include/media/stagefright/foundation/: AMessage.h
native-x86/av/media/libstagefright/foundation/: AMessage.cpp
native-x86/native/libs/utils/: CMakeLists.txt
native-x86/system/core/: CMakeLists.txt
native-x86/system/core/init/: property_service.c
native-x86/system/core/libcutils/: CMakeLists.txt
native-x86/system/core/libion/: ion.c
native-x86/system/core/liblog/: CMakeLists.txt
native-x86/system/core/libzipfile/: centraldir.c
native-x86/system/core/sdcard/: sdcard.c
native-x86/test/: CMakeLists.txt  test_aloop.cpp
